# ccroc_magneto

./: .gitignore  CMakeLists.txt  Configuration.h  config.h.cmake  config_magneto.yaml  main_magneto.cpp
beizier_planner/: BeizierPlanner.cpp  BeizierPlanner.hpp  BeizierUtilities.cpp  BeizierUtilities.hpp  CMakeLists.txt  ContactState.hpp  RobotModel.hpp
config/: config_magneto.yaml  config_magneto1.yaml  config_magneto2.yaml  config_magneto3.yaml  config_magneto4.yaml
config/hexa/: config_magneto1.yaml  config_magneto2.yaml  config_magneto3.yaml  config_magneto4.yaml  pnclog
config/slope/: config_magneto1.yaml  config_magneto2.yaml  config_magneto3.yaml  config_magneto4.yaml  pnclog.txt
matlabtests/: main.m  yands.m
matlabtests/beizier/: DeCasteljau.m  beizierPolynomial.m  bernsteinbasis.m  tpoly2beizierCoeff.m  tpoly2bernstein.m
my_geometry/: CMakeLists.txt
my_geometry/include/my_geometry/Polytope/: Polytope.h  typedefs.h
my_geometry/src/Polytope/: LownerJohnEllipsoid.cpp  Polytope.cpp
my_qpsolver/: CMakeLists.txt  QuadProgSolver.cpp  QuadProgSolver.hpp
my_qpsolver/goldfarb/: Array.hh  CMakeLists.txt
my_util/: CMakeLists.txt  IOUtilities.cpp  IOUtilities.hpp
my_yaml/: CMakeLists.txt
my_yaml/include/myYaml/: binary.h  emitfromevents.h  emitter.h  eventhandler.h  exceptions.h  mark.h  noncopyable.h  null.h  ostream_wrapper.h  parser.h  yaml.h  yaml_eigen.h
my_yaml/include/myYaml/contrib/: graphbuilder.h
my_yaml/include/myYaml/node/: convert.h  emit.h  impl.h  iterator.h  node.h  parse.h  ptr.h
my_yaml/include/myYaml/node/detail/: impl.h  iterator.h  iterator_fwd.h  (+5 more)
my_yaml/src/: binary.cpp  convert.cpp  emit.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exceptions.cpp  exp.cpp  indentation.h  memory.cpp  node.cpp  node_data.cpp  nodebuilder.cpp  nodebuilder.h  nodeevents.cpp  nodeevents.h  null.cpp  ostream_wrapper.cpp  parse.cpp  parser.cpp  ptr_vector.h  regex_yaml.h  scanner.cpp  scanner.h  scanscalar.cpp  scantag.cpp  scantoken.cpp  setting.h  singledocparser.cpp  singledocparser.h  stream.h  streamcharsource.h  token.h
my_yaml/src/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h
